<resources>
    <string name="app_name">Android-SPD-111</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_tv_title">Основи Андроїд</string>
    <string name="main_btn_calc">Калькулятор</string>
    <string name="main_btn_game">Свайпи. Гра</string>
    <string name="main_btn_chat">Мережа. Чат</string>
    <string name="main_btn_anim">Анімації</string>

    <!-- region CALC ACTIVITY -->
    <string name="calc_tv_title">Calculator</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_inverse">\u00B9/\u2093</string>
    <string name="calc_btn_square">x\u00B2</string>
    <string name="calc_btn_sqrt">\u221A\u2093\u0304</string>
    <string name="calc_btn_divide">\u00F7</string>
    <string name="calc_btn_multiply">\u2715</string>
    <string name="calc_btn_minus">\u2014</string>
    <string name="calc_btn_plus">\uFF0B</string>
    <string name="calc_btn_pm">\u00B1</string>
    <string name="calc_btn_comma">,</string>
    <string name="calc_btn_equal">\uFF1D</string>
    <string name="calc_btn_0">0</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_limit_exceeded">Limit exceeded</string>
    <string name="calc_zero_division">Division by zero</string>
    <!-- endregion -->

    <!-- region CHAT ACTIVITY -->
    <string name="chat_scroller_description">Chat messages</string>

    <!-- endregion -->

    <!-- region GAME ACTIVITY -->


    <!-- endregion -->

    <!-- region ANIM ACTIVITY -->
    <string name="anim_title">Анімації</string>
    <string name="anim_opacity_title">Прозорість</string>
    <string name="anim_size_title">Розмір</string>
    <string name="anim_arc_title">Обертання</string>
    <string name="anim_move_title">Переміщення</string>
    <string name="anim_combo_title">Комбінація</string>

    <!-- endregion -->

</resources>