<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/calc_bg"
    tools:context=".CalcActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/calc_fg"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:text="@string/calc_tv_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/calc_history_fg"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"
        tools:text="25 x 3 =" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/calc_fg"
        android:layout_gravity="end"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        tools:text="75" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="4dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp" >

            <Button
                android:id="@+id/calc_btn_percent"
                android:text="@string/calc_btn_percent"
                style="@style/calc_func_btn" />
            <Button
                android:id="@+id/calc_btn_ce"
                android:text="@string/calc_btn_ce"
                style="@style/calc_func_btn" />
            <Button
                android:id="@+id/calc_btn_c"
                android:text="@string/calc_btn_c"
                style="@style/calc_func_btn" />
            <Button
                android:id="@+id/calc_btn_backspace"
                android:text="@string/calc_btn_backspace"
                style="@style/calc_func_btn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"  >

            <Button
                android:id="@+id/calc_btn_inverse"
                android:text="@string/calc_btn_inverse"
                style="@style/calc_func_btn" />
            <Button
                android:id="@+id/calc_btn_square"
                android:text="@string/calc_btn_square"
                style="@style/calc_func_btn" />
            <Button
                android:id="@+id/calc_btn_sqrt"
                android:text="@string/calc_btn_sqrt"
                style="@style/calc_func_btn" />
            <Button
                android:id="@+id/calc_btn_divide"
                android:text="@string/calc_btn_divide"
                style="@style/calc_func_btn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp" >

            <Button
                android:id="@+id/calc_btn_7"
                android:text="@string/calc_btn_7"
                style="@style/calc_digit_btn" />
            <Button
                android:id="@+id/calc_btn_8"
                android:text="@string/calc_btn_8"
                style="@style/calc_digit_btn" />
            <Button
                android:id="@+id/calc_btn_9"
                android:text="@string/calc_btn_9"
                style="@style/calc_digit_btn" />
            <Button
                android:id="@+id/calc_btn_multiply"
                android:text="@string/calc_btn_multiply"
                style="@style/calc_func_btn" />
        </TableRow>

    </TableLayout>

</LinearLayout>